--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -9,8 +9,18 @@
         min(calc($max-wrapper-size / 2), 50%)
         1fr;
 
+    .fullBleed {
+        width: 100%;
+        grid-column: 1 / 5;
+    }
+
     @media (max-width: $tablet-breakpoint) {
-        padding: calc(var(--vertical-padding) / 2) var(--horizontal-padding);
+        padding: calc(var(--vertical-padding) / 2) 0 0;
+        grid-template-columns:
+            1fr
+            min(calc($max-wrapper-size / 4), 50%)
+            min(calc($max-wrapper-size / 4), 50%)
+            1fr;
     }
 }
 
